# flow

./: .gitignore  README.md  build.sh
.github/workflows/: ci.yml  pages.yml
bindings/python/: .gitignore  README.md  install.sh  pyproject.toml  setup.py
bindings/python/examples/: README.md  onboarding.py
bindings/python/examples/serving/: README.md  gate.ir.json  request_response.py  webhook_resume.py  worker.py
bindings/python/flowd/: __init__.py  _cffi_build.py  redactors.py  schema.py  serve.py  trace.py
bindings/python/flowd/contrib/: __init__.py  anthropic.py
bindings/python/tests/: conftest.py  test_anthropic_provider.py  test_load_ir.py  test_providers_redactor.py  test_redactors.py  test_replay.py  test_runtime.py  test_schema.py  test_serve.py  test_suspend.py  test_trace.py
bindings/python/tests/fixtures/: onboard.ir.json  triage.flow  triage.ir.json
bindings/typescript/: .gitignore  README.md  anthropic-worker.mjs  binding.gyp  package-lock.json  package.json  tsconfig.json
doc/guides/: troubleshooting.md
doc/man1/: flowc.1  flowd.1
doc/man3/: libflowd.3
doc/man5/: flow-ir.5  flow-trace.5  flow.5
doc/man7/: flow-effects.7  flow-provenance.7  flow-suspension.7  flow.7
examples/: README.md  hello.flow  triage.flow  triage.ir.json
flowc/: .gitignore  Makefile  README.md  configure
flowd/: .gitignore  Makefile  README.md  configure
scripts/: coverage.sh  diag_coverage.sh
vscode-flow/: README.md  install.sh  package.json  tasks.template.json
web/: .gitignore  README.md  build.sh  flowc_wasm.c  flowd_wasm.c  index.html  verify.js
(+297 files in other folders)
